@@ -3,6 +3,7 @@ focal for multi-layer objects
 support for RasterQuad (4 dimensional) objects
 add equivalent to "subsWithNA" to reclassify
 move resample (bilenear interp. (and add other options)) and rasterize/(lines, polygons) to C
+function for affine transformation
 
 --- development version
 Removed bugs from 'f8' in the writing functions vignette (reported by J. R. Matchett)
@@ -20,7 +21,9 @@ rasterOptions now (optionally) saved in a file in the start-up working directory
 fixed colnames in extract/polygons (cellnumbers=TRUE & df=TRUE). Reported by Florian de Boissieu
 bug with Math methods that occured when using mapply fixed thanks to Martin Morgan
 Then results of terrain(flowdir) were the mirror image of what the help says. The code has been fixed to match the help file. Reported by Daniel Schlaepfer.
-Bug fixes in dealing with RATs (reported by Dylan Beaudette) and rasterize/poings (reported by Steven Mosher)
+Bug fixes in dealing with RATs (reported by Dylan Beaudette) and rasterize/points (reported by Steven Mosher)
+Support for "GMT" netcdf files (suggested by Michael Sumner)
+Option 'ncdf=TRUE' in raster function for files with non-standard (or no) ncdf file extension (suggested by Tom Roche).
 
 --- 21-December-2012, version: 2.0-41
 fixed bugs in extend: added rows did in some cases get values from row above, and using a 'datatype' arugment led to an error. Both reported by Oliver Soong
